--- a/src/backend/src/main/resources/application.properties
+++ b/src/backend/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+spring.application.name = ProjetoFinalApplication  
+
+spring.flyway.enabled=true
+spring.flyway.url = jdbc:mysql://localhost:3306/mysql
+spring.flyway.schemas = SISTEMA_AAA
+spring.flyway.user = root
+spring.flyway.password = root
+spring.flyway.driver-class-name=com.mysql.jdbc.Driver
+spring.flyway.baseline-on-migrate=true
+
+spring.datasource.url = jdbc:mysql://localhost:3306/SISTEMA_AAA?autoreconnect=true
+spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
+spring.datasource.username = root
+spring.datasource.password = root
+spring.datasource.jpa.properties.hibernate.default_schema=SISTEMA_AAA
+
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
+
 
