Criacao rota cadastrar departamento ajuste migrations

--- a/src/backend/src/main/resources/application.properties
+++ b/src/backend/src/main/resources/application.properties
@@ -16,5 +16,6 @@ spring.datasource.jpa.properties.hibernate.default_schema=SISTEMA_AAA
 
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
-
+security.basic.enable: false
+security.ignored=/**
 
