--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/typography": "^0.5.4",
+    "axios": "^0.27.2",
     "icons": "^1.0.0",
     "next": "12.2.5",
     "next-seo": "^5.5.0",
