--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/typography": "^0.5.4",
     "icons": "^1.0.0",
+    "moment": "^2.29.4",
     "next": "12.2.5",
     "next-seo": "^5.5.0",
     "react": "^18.2.0",
