--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 8080",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -14,14 +14,18 @@
     "icons": "^1.0.0",
     "moment": "^2.29.4",
     "next": "12.2.5",
+    "next-auth": "^4.10.3",
     "next-seo": "^5.5.0",
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.35.0",
     "react-icons": "^4.4.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "tslog": "^3.3.4"
   },
   "devDependencies": {
+    "@types/next-auth": "^3.15.0",
     "@types/node": "18.7.4",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
