--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.8",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/typography": "^0.5.4",
     "icons": "^1.0.0",
@@ -22,7 +23,8 @@
     "react-hook-form": "^7.35.0",
     "react-icons": "^4.4.0",
     "styled-components": "^5.3.5",
-    "tslog": "^3.3.4"
+    "tslog": "^3.3.4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/next-auth": "^3.15.0",
